--- a/views/contactos/edit.ejs
+++ b/views/contactos/edit.ejs
@@ -1,15 +1,16 @@
 
     <div class="container margen_superior" id="new-edit">
 
-    	<h4>Modificar centro</h4>
+    	<h4>Modificar contacto</h4>
 
     	<form class="form-horizontal"
     			method="post"
-    			action="/centros/<%= centro.id %>/update?_method=put">
+    			action="/contactos/<%= contacto.id %>/update?_method=put">
 
     		<% include _form.ejs %>
 
     	</form>
+
 
 
     </div>
