--- a/views/user/index.ejs
+++ b/views/user/index.ejs
@@ -18,7 +18,7 @@
                     </tr>
                 </thead>
                 <tbody>
-                    <% for (var i in user) { %>
+                    <% for (let i in user) { %>
                         <tr>
 
                             <td><%= user[i].id %></td>
