--- a/views/centros/_form.ejs
+++ b/views/centros/_form.ejs
@@ -1,7 +1,7 @@
 
 <div class="container" id="centro_form">
 
-    <h4><i class="fa fa-dashboard"></i> Centro</h4>
+    <h4><img src="/images/centros.png" alt=""> Centro</h4>
     <br>
 
 
