--- a/views/contadores/_form.ejs
+++ b/views/contadores/_form.ejs
@@ -1,7 +1,7 @@
 
 <div class="container" id="contador_form">
 
-    <h4><i class="fa fa-dashboard"></i> Contador</h4>
+    <h4><img src="/images/contador2.png" alt="" /> Contador</h4>
     <br>
 
 
