--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -25,6 +25,7 @@
 	<script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
 	<script type="text/javascript" src="/js/holder.js"></script>
 	<script type="text/javascript" src="/js/transition.js"></script>
+	<script type="text/javascript" src="/js/cookies.js"></script>
 <!--	<script type="text/javascript" src="/js/bootstrap-datepicker.min.js"></script> -->
 <!--	<script type="text/javascript" src="http://maps.google.com/maps/api/js?sensor=true"></script>
 	<script type="text/javascript" src="/js/gmaps.js"></script>
@@ -80,6 +81,7 @@
 					<% if (session.user) {
 						if (session.user.isSuperAdmin) {%>
 							<li><a href="/centros"><img src="/images/centros.png" alt=""> Centros </a></li>
+							<li><a href="/contactos"><img src="/images/contacts.png" alt=""> Contactos </a></li>
 						<%}%>
 					<%}%>
 					<li><a href="/user"><img src="/images/user.png" alt=""> Usuarios </a></li>
