--- a/views/quizes/_form.ejs
+++ b/views/quizes/_form.ejs
@@ -1,5 +1,9 @@
 
 <div class="container" id="parte_form">
+
+	<h4><img src="/images/partes3.png" alt=""> Parte</h4>
+	<br>
+
 	<!-- <div class="form-group">
 		<label for="preg" class="col-sm-2 control-label">Fecha:</label>
 		<div class="col-sm-10">
@@ -130,7 +134,7 @@
 
 
 
-	<div class="form-group">
+	<div class="form-group text-center">
 		<div class="col-sm-offset-2 col-sm-10">
 			<a href="/quizes">
 				<button class="btn btn-danger btn-sm" type="button">
