--- a/views/index.ejs
+++ b/views/index.ejs
@@ -3,9 +3,7 @@
 		<div class="alert alert-warning alert-dismissible alerta-panel" role="alert">
 			<button type="button" class="close" data-dismiss="alert" aria-label="Close"><span aria-hidden="true">&times;</span></button>
 			<p><strong>¡Uso de cookies!</strong> Este sitio web utiliza cookies para que usted tenga la mejor experiencia de usuario. Si continúa navegando está dando su consentimiento para la aceptación de las mencionadas cookies y la aceptación de nuestra política de cookies, pinche el enlace
-			<a class="button"
-				style="cursor: pointer"
-				data-toggle="modal"
+			<a 	data-toggle="modal"
 				data-target="#lopd-modal">
 				<span> política de privacidad</span>
 			</a>
@@ -31,7 +29,7 @@
 	<div class="container-fluid bordes text-center animated fadeIn" id="inicio">
 
 
-		<img src="/images/inicio/07.jpg" >
+		<img src="/images/inicio/09.jpg" >
 
 		<div id="inicio-panel">
 				<h1>Gestión de Contadores</h1>
@@ -98,6 +96,8 @@
 	<!-- SECCION 02 =================================================================================== -->
 
 	<div class="container-fluid bordes" id="seccion_02">
+
+
 
 		<h2 class="text-center">Así de fácil...</h2>
 
