--- a/public/stylesheets/pc.css
+++ b/public/stylesheets/pc.css
@@ -348,11 +348,16 @@
 	#inicio {
 
 /*		background: url(/images/inicio/07.jpg) no-repeat fixed center; */
+/*		background-color: rgba(30, 144, 255, 0.8); */
+
+
+
+
 		max-height: 70vh;
-		min-height: 400px;
+		min-height: 500px;
 		padding: 0px;
 
-		color: rgba(0, 0, 0, 1.0);
+		color: #FAFAFA;
 		overflow: 	hidden;
 
 	}
@@ -436,6 +441,8 @@
 		background-image: none;
 /*		background-color: rgba(30, 144, 255, 0.7); */
 		background-color: rgba(0, 0, 0, 0.7);
+		border: none;
+		border-radius: 0;
 
 
 	}
@@ -445,11 +452,13 @@
 		color: rgba(30, 144, 255, 0.7);
 		text-align: center;
 
+
 	}
 
 	.alerta-panel a:hover {
 
  		color: #eb9837;
+		cursor: pointer;
 
 	}
 
@@ -569,12 +578,13 @@
 
 	#seccion_02 {
 
+
 		height: 	auto;
 
 		padding: 0px;
 /*		min-height: 550px;					/* si cambias este parametro, tambien el  #wrap */
 		position: relative;
-		background-color: rgba(30, 144, 255, 0.8);
+/*		background-color: rgba(30, 144, 255, 0.8); */
 
 		overflow: 	hidden;
 
@@ -585,6 +595,14 @@
 		-webkit-justify-content: 	space-around;
 		justify-content: 			space-around;
 
+		background: rgba(73,155,234,1);
+		background: -moz-radial-gradient(center, ellipse cover, rgba(73,155,234,1) 0%, rgba(73,155,234,1) 12%, rgba(17,82,194,1) 77%, rgba(17,82,194,1) 100%);
+		background: -webkit-gradient(radial, center center, 0px, center center, 100%, color-stop(0%, rgba(73,155,234,1)), color-stop(12%, rgba(73,155,234,1)), color-stop(77%, rgba(17,82,194,1)), color-stop(100%, rgba(17,82,194,1)));
+		background: -webkit-radial-gradient(center, ellipse cover, rgba(73,155,234,1) 0%, rgba(73,155,234,1) 12%, rgba(17,82,194,1) 77%, rgba(17,82,194,1) 100%);
+		background: -o-radial-gradient(center, ellipse cover, rgba(73,155,234,1) 0%, rgba(73,155,234,1) 12%, rgba(17,82,194,1) 77%, rgba(17,82,194,1) 100%);
+		background: -ms-radial-gradient(center, ellipse cover, rgba(73,155,234,1) 0%, rgba(73,155,234,1) 12%, rgba(17,82,194,1) 77%, rgba(17,82,194,1) 100%);
+		background: radial-gradient(ellipse at center, rgba(73,155,234,1) 0%, rgba(73,155,234,1) 12%, rgba(17,82,194,1) 77%, rgba(17,82,194,1) 100%);
+		filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#499bea', endColorstr='#1152c2', GradientType=1 );
 
 
 	}
