--- a/public/stylesheets/pc.css
+++ b/public/stylesheets/pc.css
@@ -426,9 +426,9 @@
 	}
 
 	.alerta-cookies {													/* etilo aviso cookies */
-		max-width: 300px;
-		margin-left: 25px;
-		margin-top: 25px;
+		max-width: 100%;
+		margin-left: 0px;
+		margin-top: 0px;
 		position: fixed;
 
 		z-index: 3;
@@ -466,6 +466,53 @@
 
 		text-align: justify;
 	}
+
+
+
+
+	#login_inicio {
+
+		width: 100%;
+		position: absolute;
+		top: 2vh;
+		z-index: 5;
+	}
+
+	#inicio_form {
+
+		margin-right: 40px;
+		float: right;
+
+
+
+	}
+
+
+	#inicio_form input {
+
+		max-width: 100px;
+		height: 25px;
+		padding-left: 0px;
+
+
+
+	}
+
+
+	.input-login-incio {
+
+		padding-left: 5px;
+		padding-right: 0px;
+	}
+
+	.input-login-incio button {
+
+		margin-top: 2px;
+
+
+	}
+
+
 
 
 
