--- a/public/stylesheets/tablet.css
+++ b/public/stylesheets/tablet.css
@@ -11,6 +11,26 @@
 @media only screen and (min-width: 768px) {  			/* tablet */
 
 
+    /* INICIO =============================================================== */
+
+    #inicio {
+
+        min-height: 380px;
+
+    }
+
+    #inicio img{
+
+        min-height: 380px;
+
+    }
+
+
+
+
+
+
+
     /* SECCION 01 =============================================================== */
     /* SECCION 01 =============================================================== */
     /* SECCION 01 =============================================================== */
