--- a/views/index.ejs
+++ b/views/index.ejs
@@ -39,13 +39,19 @@
 				<div class="form-group">
 
 						<div class="col-md-4 col-sm-4 col-xs-4 input-login-incio">
-							<input class="form-control" type="text" id="login" name="login"  placeholder="usuario"/>
+
+							<div class="input-group">
+								<div class="input-group-addon"><i class="fa fa-user" /></i></div><input class="form-control" type="text" id="login" name="login"  placeholder=" usuario"/>
+							</div>
+
 						</div>
 						<div class="col-md-4 col-sm-4 col-xs-4 input-login-incio">
-							<input class="form-control" type="password" id="password" name="password" placeholder="clave"/>
+							<div class="input-group">
+								<div class="input-group-addon"><i class="fa fa-key" /></i></div><input class="form-control" type="password" id="password" name="password" placeholder=" clave"/>
+							</div>
 						</div>
-						<div class="col-md-3 col-smd-3 col-xs-3 input-login-incio">
-							<button class="btn btn-success btn-xs" type="submit"><i class="fa fa-check"></i></button>
+						<div class="col-md-3 col-smd-3 col-xs-1 input-login-incio">
+							<button class="btn btn-default btn-xs" type="submit"><i class="fa fa-check"></i></button>
 						</div>
 
 				</div>
