--- a/public/stylesheets/movil.css
+++ b/public/stylesheets/movil.css
@@ -16,7 +16,13 @@
 
     #inicio {
 
-        min-height: 0%;
+        min-height: 250px;
+
+    }
+
+    #inicio img{
+
+        min-height: 250px;
 
     }
 
@@ -30,6 +36,27 @@
 
         font-size: 18px;
     }
+
+
+
+
+    #login_inicio {
+
+
+
+        padding-left: 80px;
+
+    }
+
+
+    #inicio_form {
+
+
+    }
+
+
+
+
 
 
 
@@ -122,6 +149,8 @@
 
         margin: 5px 25px 5px 25px;
 
+        background: radial-gradient(none);
+
     }
 
     #seccion_02 h2 {
@@ -129,6 +158,16 @@
 		margin-top: 10px;
 
 	}
+
+
+    /* ============================================================  */
+    /* ======= CONTACTO =============================================  */
+    /* ============================================================  */
+
+        #contacto_form {
+
+            margin: 10px;
+        }
 
 
 
