--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -5,6 +5,7 @@
 	<meta charset="UTF-8"/>
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
+	<meta name="author" content="Jose Juan Montoyo Coronati">
 <!--	<meta name="google-site-verification" content="qB4EJYsedM-QXqZpbtiVOtYFr9TI50Nb8UF3xkLRq6A"/> -->
 	<title>Contadores</title>
 
