--- a/public/stylesheets/pc.css
+++ b/public/stylesheets/pc.css
@@ -18,19 +18,10 @@
 
 	}
 
-	.table-responsive {
-
-
-
-	}
-
 
 	.table-striped > tbody > tr:nth-of-type(2n+1) {			/* estilo de los row impares de todas las tablas */
 
 		padding: 5px;
-
-	/*    	background-color: #f9f9f9;
-		background-color: #F2F2F2; */
 		background-color: #EFF5FB;
 
 	}
@@ -38,7 +29,6 @@
 	.table-striped > tbody > tr:hover {						/* estilo de los row :hover de todas las tablas */
 
 		background-color: #CEE3F6;
-
 		-moz-transition: all 0.3s;
 		-o-transition: all 0.3s;
 		-webkit-transition: all 0.3s;
@@ -49,7 +39,6 @@
 	.table > tbody > tr > td {								/*  estilo de los row de todas las tablas */
 
 		padding: 5px;
-
 		border: none;
 
 	}
@@ -60,15 +49,6 @@
 		color: #eb9837;
 		outline: 0;
 	}
-
-	.nav #menu-inicio-item ul li a:active, a:focus, a:hover {
-
-		text-decoration: none;
-		color: #eb9837;
-		outline: 0;
-
-	}
-
 
 
 
@@ -149,15 +129,13 @@
 
 
 
-	#ver-mas-modal, #lopd  {
+	#ver-mas-modal, #lopd-modal, #cookies-modal  {
 
 		color: #585858;
-		text-align: left;
+		text-align: justify;
 
 
 	}
-
-
 
 
 
@@ -768,10 +746,16 @@
 
 	#pie {
 
+		width: 100%;
+		min-height: 50px;
 
-		min-height: 150px;
+/*		position: fixed;
+		bottom: 0px; */
 
-		background-color: rgba(0, 0, 0, 0.8);
+ 		background-color: rgba(0, 0, 0, 0.8);
+
+		color: #A4A4A4;
+
 
 
 
