--- a/views/index.ejs
+++ b/views/index.ejs
@@ -27,29 +27,26 @@
 
 	<div class="container-fluid bordes text-center animated fadeIn" id="inicio">
 
-
 		<img src="/images/inicio/09.jpg" >
 
-
 		<div id="login_inicio">
-
 
 			<form class="form-horizontal" method='POST' action='/login' id="inicio_form">
 
 				<div class="form-group">
 
 						<div class="col-md-4 col-sm-4 col-xs-4 input-login-incio">
-
 							<div class="input-group">
 								<div class="input-group-addon"><i class="fa fa-user" /></i></div><input class="form-control" type="text" id="login" name="login"  placeholder=" usuario"/>
 							</div>
-
 						</div>
+
 						<div class="col-md-4 col-sm-4 col-xs-4 input-login-incio">
 							<div class="input-group">
 								<div class="input-group-addon"><i class="fa fa-key" /></i></div><input class="form-control" type="password" id="password" name="password" placeholder=" clave"/>
 							</div>
 						</div>
+
 						<div class="col-md-3 col-smd-3 col-xs-1 input-login-incio">
 							<button class="btn btn-default btn-xs" type="submit"><i class="fa fa-check"></i></button>
 						</div>
@@ -67,7 +64,7 @@
 
 		<div id="inicio-panel">
 				<h1>Gestión de Contadores</h1>
-				<h1><%= title %></h1>
+				<h1><%= title %><span style="font-size: 18px">&copy;</span></h1>
 				<h3>Lecturas y consumos de suministros externos o depósitos</h3>
 				<br>
 				<button class="btn btn-info"
@@ -241,22 +238,23 @@
 
 
 
-		<!-- PIE =================================================================================== -->
+	<!-- PIE =================================================================================== -->
 
-		<div class="footer" id="pie">
-
-
-			<p>&copy; 2017 cosilsCompany, Inc. &middot;
-
-				<a
-					data-toggle="modal"
-					data-target="#lopd-modal">Terms
-				</a>
-
-			</p>
+	<div class="footer" id="pie">
 
 
-		</div>
+		<h5>&copy; 2017 cosilsCompany, Inc. &middot;
+
+			<a
+				data-toggle="modal"
+				data-target="#lopd-modal">Terms
+			</a>
+
+		</h5>
+
+
+	</div>
+
 
 
 
@@ -277,7 +275,7 @@
 
 					<div class="modal-header text-center">
 						<button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
-		                <h2>SupCounter</h2>
+		                <h2>SupCounter<span style="font-size: 15px; margin-top: 2px;">&copy;</span></h2>
 
 					</div>
 
@@ -293,7 +291,7 @@
 						</p>
 						<p>Permite obtener en tiempo inmediato los informes sobre consumos, generando avisos sobre posibles desvíos.</p>
 						<p>Reduce alrededor de un 80% el tiempo empleado en sistemas tradicionales.<p>
-						<p>Web Developer: José Juan Montoyo Coronati</p>
+						<p>Desarrollado por:</p>
 						<p class="text-center">&copy; 2017 cosilsCompany, Inc. &middot;
 							<a href="mailto:jotamontoyo@hotmail.es">jotamontoyo@hotmail.es</a> &middot;
 							<a
@@ -303,7 +301,7 @@
 						</p>
 					</div>
 
-					<a id="acceso" href="/login"><img src="/images/user2.png" alt=""> Login&nbsp;</a>
+<!--					<a id="acceso" href="/login"><img src="/images/user2.png" alt=""> Login&nbsp;</a> -->
 					<div class="modal-footer">
 						<button type="btn btn-small" class="btn btn-warning btn-xs" data-dismiss="modal">
 							Cerrar
@@ -317,7 +315,7 @@
 
 		<!-- MODAL POLITICA DE PRIVACIDAD ===================================================================================== -->
 		<div class="modal fade" id="lopd-modal" tabindex="-1" role="dialog" aria-labelledby="myLOPD" aria-hidden="true">
-			<div class="modal-dialog">
+			<div class="modal-dialog modal-lg">
 				<div class="modal-content">
 					<div class="modal-header">
 						<button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
@@ -329,7 +327,15 @@
 						<br>
 						<p>A efectos de lo dispuesto en la normativa vigente en materia de protección de datos de carácter personal, mediante esta Política de Privacidad, cosilsCompany, Inc. (en adelante, “cosilsCompany” informa a los usuarios (en adelante, el “Usuario” o “Usuarios”) de su sitio Web https://supcounter.herokuapp.com (en adelante, el “Sitio Web”) acerca de su política de protección de los datos de carácter personal recogidos de los Usuarios del Sitio Web, para que éstos determinen libre y voluntariamente si desean facilitar a cosilsCompany los datos personales que se les puedan requerir o que se puedan obtener sobre los mismos con ocasión de su acceso y uso del Sitio Web.</p>
 
-						<p>Los únicos datos personales a los que cosilsCompany tendrá acceso a través del Sitio Web serán aquellos que el Usuario facilite voluntariamente, así como aquellos otros recogidos a través de las cookies instaladas y cuya Política de Privacidad puede consultar en el siguiente enlace https://supcounter.herokuapp.com/cookies.</p>
+						<p>Los únicos datos personales a los que cosilsCompany tendrá acceso a través del Sitio Web serán aquellos que el Usuario facilite voluntariamente, así como aquellos otros recogidos a través de las cookies instaladas y cuyas condiciones de uso puede consultar en el enlace
+
+							<a
+								data-toggle="modal"
+								data-target="#cookies-modal">política de cookies.
+							</a>
+
+
+						</p>
 
 						<p>En cumplimiento de la normativa vigente, cosilsCompany adopta las medidas técnicas y organizativas necesarias para mantener el nivel de seguridad requerido en atención a los datos personales tratados. Asimismo está dotado de los mecanismos precisos a su alcance para evitar en la medida de lo posible accesos no autorizados, sustracciones y modificaciones ilícitas y la pérdida de los datos.</p>
 
@@ -351,6 +357,52 @@
 
 							<li>En caso de que el Usuario sea menor de 14 años, sus datos personales deben ser facilitados con autorización de su representante legal.</li>
 						</ul>
+					</div>
+					<div class="modal-footer">
+						<button type="button" class="btn btn-warning btn-xs" data-dismiss="modal">Cerrar</button>
+					</div>
+				</div>
+			</div>
+		</div>
+
+		<!-- MODAL POLITICA DE COOKIES ===================================================================================== -->
+		<div class="modal fade" id="cookies-modal" tabindex="-1" role="dialog" aria-labelledby="myCookies" aria-hidden="true">
+			<div class="modal-dialog modal-lg">
+				<div class="modal-content">
+					<div class="modal-header">
+						<button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+						<h4 class="modal-title text-center" id="myCookies">&copy; 2017 cosilsCompany, Inc.</h4>
+					</div>
+					<div class="modal-body">
+
+						<h3 class="text-center">Política de Cookies</h3>
+						<br>
+						<p>Cookie es un fichero que se descarga en su ordenador al acceder a determinadas páginas web. Las cookies permiten a una página web, entre otras cosas, almacenar y recuperar información sobre los hábitos de navegación de un usuario o de su equipo y, dependiendo de la información que contengan y de la forma en que utilice su equipo, pueden utilizarse para reconocer al usuario. El navegador del usuario memoriza cookies en el disco duro solamente durante la sesión actual, 	ocupando un espacio de memoria mínimo y no perjudicando al ordenador. Las cookies no contienen ninguna clase de información personal específica, y la mayoría de las mismas se borran del disco duro al finalizar la sesión de navegador (las denominadas cookies de sesión).</p>
+
+						<p>La mayoría de los navegadores aceptan como estándar a las cookies y, con independencia de las mismas, permiten o impiden en los ajustes de seguridad las cookies temporales o memorizadas.</p>
+
+						<p>Sin su expreso consentimiento –mediante la activación de las cookies en su navegador– no enlazará en las cookies los datos memorizados con sus datos personales proporcionados en el momento del registro o la compra.</p>
+
+						<p><strong>¿Qué tipos de cookies utiliza esta página web?</strong></p>
+
+						<ul>
+							<li>Cookies técnicas: Son aquéllas que permiten al usuario la navegación a través de una página web, plataforma o aplicación y la utilización de las diferentes opciones o servicios que en ella existan como, por ejemplo, controlar el tráfico y la comunicación de datos, identificar la sesión, acceder a partes de acceso restringido, recordar los elementos que integran un pedido, realizar el proceso de compra de un pedido, realizar la solicitud de inscripción o participación en un evento, utilizar elementos de seguridad durante la navegación, almacenar contenidos para la difusión de videos o sonido o compartir contenidos a través de redes sociales.</li>
+
+							<li>Cookies de personalización: Son aquéllas que permiten al usuario acceder al servicio con algunas características de carácter general predefinidas en función de una serie de criterios en el terminal del usuario como por ejemplo serian el idioma, el tipo de navegador a través del cual accede al servicio, la configuración regional desde donde accede al servicio, etc...</li>
+
+							<li>Cookies de análisis: Son aquéllas que bien tratadas por nosotros o por terceros, nos permiten cuantificar el número de usuarios y así realizar la medición y análisis estadístico de la utilización que hacen los usuarios del servicio ofertado. Para ello se analiza su navegación en nuestra página web con el fin de mejorar la oferta de productos o servicios que le ofrecemos.</li>
+
+							<li>Cookies publicitarias: Son aquéllas que, bien tratadas por nosotros o por terceros, nos permiten gestionar de la forma más eficaz posible la oferta de los espacios publicitarios que hay en la página web, adecuando el contenido del anuncio al contenido del servicio solicitado o al uso que realice de nuestra página web. Para ello podemos analizar sus hábitos de navegación en Internet y podemos mostrarle publicidad relacionada con su perfil de navegación.</li>
+
+							<li>Cookies de publicidad comportamental: Son aquéllas que permiten la gestión, de la forma más eficaz posible, de los espacios publicitarios que, en su caso, el editor haya incluido en una página web, aplicación o plataforma desde la que presta el servicio solicitado. Estas cookies almacenan información del comportamiento de los usuarios obtenida a través de la observación continuada de sus hábitos de navegación, lo que permite desarrollar un perfil específico para mostrar publicidad en función del mismo.</li>
+						</ul>
+
+						<p><strong>Cookies de terceros:</strong> La Web de SupCounter puede utilizar servicios de terceros que, por cuenta de cosilsCompany, recopilarán información con fines estadísticos, de uso del Site por parte del usuario y para la prestacion de otros servicios relacionados con la actividad del Website y otros servicios de Internet.</p>
+
+						<p>En particular, este sitio Web utiliza Google Analytics, un servicio analítico de web prestado por Google, Inc. con domicilio en los Estados Unidos con sede central en 1600 Amphitheatre Parkway, Mountain View, California 94043.  Para la prestación de estos servicios, estos utilizan cookies que recopilan la información, incluida la dirección IP del usuario, que será transmitida, tratada y almacenada por Google en los términos fijados en la Web Google.com. Incluyendo la posible transmisión de dicha información a terceros por razones de exigencia legal o cuando dichos terceros procesen la información por cuenta de Google.</p>
+
+
+
 					</div>
 					<div class="modal-footer">
 						<button type="button" class="btn btn-warning btn-xs" data-dismiss="modal">Cerrar</button>
