--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -18,6 +18,7 @@
 	<link rel="stylesheet" type="text/css" href="/stylesheets/animate.css"/>
 <!--	<link rel="stylesheet" type="text/css" href="/stylesheets/bootstrap-datepicker.css"/> -->
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
+	<link rel="stylesheet" type="text/css" href="/stylesheets/sweetalert2.css"/>
 
 
 <!--	<link rel="stylesheet" type="text/css" href="/stylesheets/carousel.css"/>
@@ -27,6 +28,7 @@
 	<script type="text/javascript" src="/js/holder.js"></script>
 	<script type="text/javascript" src="/js/transition.js"></script>
 	<script type="text/javascript" src="/js/cookies.js"></script>
+	<script type="text/javascript" src="/js/sweetalert2.min.js"></script>
 <!--	<script type="text/javascript" src="/js/bootstrap-datepicker.min.js"></script> -->
 <!--	<script type="text/javascript" src="http://maps.google.com/maps/api/js?sensor=true"></script>
 	<script type="text/javascript" src="/js/gmaps.js"></script>
@@ -142,6 +144,13 @@
 <!--	<div class="row"  style="position: relative; bottom: 10px;">
 		<p class="text-center">&copy; 2017 jotaCompany, Inc. &middot; <a href="https://github.com/jotamontoyo/incipro">GitHub</a> &middot; <a href="#">Terms</a></p>
 	</div> -->
+
+
+
+
+
+
+
 
 </div>
 
